# magic-claude

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE-NOTES.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.js
.claude-plugin/: marketplace.json  plugin.json
agents/: architect.md  build-error-resolver.md  ci-cd-architect.md  code-reviewer.md  doc-updater.md  e2e-runner.md  git-sync.md  gradle-expert.md  groovy-reviewer.md  java-reviewer.md  jvm-build-resolver.md  jvm-refactor-cleaner.md  jvm-security-reviewer.md  jvm-tdd-guide.md  kotlin-reviewer.md  maven-expert.md  planner.md  python-build-resolver.md  python-reviewer.md  python-tdd-guide.md  refactor-cleaner.md  security-reviewer.md  setup-agent.md  tdd-guide.md  ts-build-resolver.md  ts-e2e-runner.md  ts-security-reviewer.md  ts-tdd-guide.md
commands/: build-fix.md  checkpoint.md  ci-cd.cjs  ci-cd.js  code-review.md  e2e.md  eval.md  learn.md  orchestrate.md  plan.md  refactor-clean.md  setup-ecosystem.md  setup-pm.md  setup-rules.md  setup.md  status.md  tdd.md  test-coverage.md  update-codemaps.md  update-docs.md  verify.md
docs/: AGENT-CATALOG.md  ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION-PLAN-V3.md  IMPROVEMENT_PLAN.md  MIGRATION-GUIDE.md  MIGRATION-v2.md  PERFORMANCE.md  (+10 more)
tests/fixtures/sample-monorepo/ml/: pyproject.toml
tests/fixtures/sample-monorepo/ml/src/: model.py
tests/fixtures/sample-python-project/: pyproject.toml
tests/fixtures/sample-python-project/src/: __init__.py  main.py  utils.py
tests/fixtures/sample-python-project/tests/: test_main.py
(+481 files in other folders)
